--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,7 @@
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
             <a href="{{ site.baseurl }}/categories">Categories</a>
+            <a href="file/CV_do_dinh_phat.pdf">My CV</a>
           </nav>
         </header>
       </div>
